fix (malevitch): fixed disconnection (contrast mode & font size) and fixed translations for homepage

--- a/requirements/malevitch/css/user-profile.css
+++ b/requirements/malevitch/css/user-profile.css
@@ -157,7 +157,7 @@
 
 .user-profile-history-card-result,
 .user-profile-stats-card-stat {
-	font-size: 15pt;
+	font-size: 13pt;
 	font-weight: 700;
 	margin-right: 16px;
 }
